correction_signup_view1

--- a/app/views/mypages/identifications/new.html.haml
+++ b/app/views/mypages/identifications/new.html.haml
@@ -18,7 +18,7 @@
           .mypage__identifications--form-info-link
             =link_to do
               本人確認書類のアップロードについて
-              = icon('fas','chevron-right')
+              .fas.fa-chevron-right
         .mypage__identifications--form-name
           .mypage__identifications--form-name-title
             .mypage__identifications--child-title
