--- a/app/views/signup/addresses/new.html.haml
+++ b/app/views/signup/addresses/new.html.haml
@@ -45,7 +45,7 @@
             必須
         .address__form--input
           %input.address__form--input-box{placeholder: "--"}
-          = icon('fas','chevron-down',class: "address__form--input-arrow-icon")
+          .fas.fa-chevron-down.address__form--input-arrow-icon
 
       .address__form
         .address__form--title
