--- a/app/views/signup/sms_confirmations/index.html.haml
+++ b/app/views/signup/sms_confirmations/index.html.haml
@@ -20,6 +20,6 @@
       .sms_confirmation__form--Personal_information
         = link_to do
           電話番号の確認が必要な理由
-          = icon('fas','chevron-right')
+          .fas.fa-chevron-right
 
   = render "/signup/shered/signup_fotter"
