--- a/app/assets/stylesheets/_items_new.scss
+++ b/app/assets/stylesheets/_items_new.scss
@@ -3,13 +3,10 @@ body{
     font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
 }
 
-
 @mixin box($height,$width){
   height: $height;
   width: $width;
 }
-
-
 
 .item_new{
   @include box(auto,700px);
@@ -67,7 +64,6 @@ body{
       margin: 0 auto;
     }
   }
-
   &__title{
     @include box(33px,675px);
     text-align: center;
@@ -76,8 +72,19 @@ body{
     padding: 32px 16px;
   }
   &__image{
-    @include box(223px,auto);
+    width: auto;
     padding: 40px;
+    &--box{
+      margin-top: 18px;
+      display: flex;
+      width: auto;
+      &-prevews{
+        display: flex;
+      }
+      &-prevews-1{
+        display: flex;
+      }
+    }
     &--titles{
       display: flex;
     }
@@ -86,27 +93,32 @@ body{
       font-size: 14px;
     }
     &--input{
-      @include box(50px,538px);
+      @include box(164px,-webkit-fill-available);
       background-color: #f5f5f5;
-      padding: 55px 40px;
       border: 1px dashed #ccc;
-      margin-top: 18px;
       text-align: center;
       font-size: 14px;
       letter-spacing: -2px;
       color: #000;
+      position: relative;
+        &-text{
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform : translate(-50%,-50%);
+          transform : translate(-50%,-50%);
+           text-align: center;
+        }
       &-zone{
         @include box(auto,auto)
       }
-
-
     }
     &--input-none{
       display: none;
     }
   }
   &__image--views{
-    @include box(120px,auto);
+    @include box(0px,auto);
     padding: 0 55px ;
     display: flex;
     &-box{
@@ -126,10 +138,12 @@ body{
     display: none;
   }
   &__image--view{
-    display: none;
-    @include box(160px,114px);
+    @include box(164px,115px);
     background: #f5f5f5;
     margin-right: 10px;
+    border-top: 0.5px solid #eee;
+    border-left: 0.5px solid #eee;
+    border-right: 0.5px solid #eee;
     &-image{
       margin: auto 0;
       @include box(116px,114px);
@@ -139,7 +153,11 @@ body{
       display: flex;
       background-color: white;
       &-edit-button{
-        @include box(44px,57px);
+        border-bottom: 0.5px solid #eee;
+        font-size: 14px;
+        text-align: center;
+        line-height: 44px;
+        @include box(44px,56.5px);
         color:#0099e8;
         background: #f5f5f5;
         z-index: 100;
@@ -148,19 +166,22 @@ body{
         opacity: 0.7;
         text-decoration: underline;
       }
-      &-new-button{
-        @include box(44px,57px);
+      &-delete-button{
+        border-left: 0.5px solid #eee;
+        border-right: 0.5px solid #eee;
+        border-bottom: 0.5px solid #eee;
+        font-size: 14px;
+        line-height: 44px;
+        text-align: center;
+        @include box(44px,56.5px);
         color:#0099e8;
         background: #f5f5f5;
         z-index: 100;
       }
-      &-new-button:hover{
+      &-delete-button:hover{
         opacity: 0.7;
         text-decoration: underline;
-
-
       }
-
     }
   }
   &__item_name_description{
