--- a/app/assets/stylesheets/_items_new.scss
+++ b/app/assets/stylesheets/_items_new.scss
@@ -145,19 +145,23 @@ body{
     border-left: 0.5px solid #eee;
     border-right: 0.5px solid #eee;
     &-image{
+      border-left: 0.5px solid #eee;
+      border-right: 0.5px solid #eee;
+      border-top: 0.5px solid #eee;
       margin: auto 0;
       @include box(116px,114px);
     }
     &-buttons{
-      @include box(44px,114px);
+      @include box(44px,116px);
       display: flex;
       background-color: white;
       &-edit-button{
+        border-left: 0.5px solid #eee;
         border-bottom: 0.5px solid #eee;
         font-size: 14px;
         text-align: center;
         line-height: 44px;
-        @include box(44px,56.5px);
+        @include box(44px,57px);
         color:#0099e8;
         background: #f5f5f5;
         z-index: 100;
@@ -173,7 +177,7 @@ body{
         font-size: 14px;
         line-height: 44px;
         text-align: center;
-        @include box(44px,56.5px);
+        @include box(44px,57px);
         color:#0099e8;
         background: #f5f5f5;
         z-index: 100;
