item_edit_correction3

--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -56,6 +56,7 @@
           .item_new__deteils--right-box.item_new__right-box
             .item_new__deteils--box
               .item_new__deteils--name
+                .item_new__category--data{parent:@item.categories.first.parent,child: @item.categories.first.child,grandchild: @item.categories.first.id}
                 .item_new__child--title
                   カテゴリー
                 .item_new__need_mark
